# Local-Coding-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  audit_5_0a.py  audit_5_1.py  benchmark.py  build_clean.py  do_clean.py  do_format.py  do_patch.py  fix_di.py  fix_orchestrator.py  gen_md.py  main.py  patch_orchestrator.py  pyproject.toml  pytest.ini  requirements.txt  rewrite_orchestrator.py  test_script.py  test_script2.py  test_script3.py  verify.py  wrap_orchestrator.py
.github/workflows/: ci.yml
agent/: cli.py  config.py  orchestrator.py
agent/coder/: core.py
agent/context/: __init__.py  context_store.py  detectors.py  engine.py  scanner.py  schemas.py  summarizer.py
agent/engine/: __init__.py  agent_engine.py  base.py  capability_detector.py  governor.py  pipeline_engine.py  selector.py
agent/evaluation/: analyzer.py  arbitration_benchmark.py  arbitration_schemas.py  claude_benchmark.py  improvement_schemas.py  reflection_benchmark.py  reflection_schemas.py  replay_manager.py  replay_schemas.py  reporting.py  runner.py  schemas.py
agent/exceptions/: errors.py
agent/execution/: core.py
agent/files/: core.py
agent/git/: __init__.py  core.py
agent/graph/: __init__.py  builder.py  impact_analyzer.py  queries.py  schemas.py  store.py
agent/llm/: claude_client.py  client.py  factory.py  preflight.py  pricing.py  schemas.py
agent/llm/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py  util.py
agent/memory/: manager.py  project_memory.py  schemas.py
agent/models/: schemas.py
agent/observability/: __init__.py  dashboard.py  events.py  panels.py  report_view.py
agent/orchestration/: __init__.py  coordinator.py  decomposer.py  merger.py  scheduler.py  worker.py
agent/planner/: core.py
agent/planning/: __init__.py  incremental.py  plan_state.py  replanner.py  step_planner.py
agent/plugins/: __init__.py  base.py  builtin_provider.py  community_provider.py  manager.py  mcp_provider.py  permissions.py  project_provider.py
agent/refiner/: core.py  schemas.py
agent/reflection/: __init__.py  manager.py  schemas.py
agent/repair/: __init__.py  classifier.py  coder.py  constraint_validator.py  constraints.py  manager.py  normalizer.py  rollback.py
agent/reporting/: core.py
agent/retrieval/: __init__.py  repository_map.py  retrieval_manager.py  ripgrep_search.py  symbol_index.py  tree_sitter_indexer.py
agent/review/: __init__.py  arbitration.py  budget.py  confidence.py  router.py  schemas.py
agent/reviewers/: __init__.py  claude_reviewer.py  reviewer.py  schemas.py
agent/safety/: __init__.py  commands.py  controller.py  diff.py  jail.py  redact.py
agent/session/: __init__.py  checkpointer.py  resume.py  store.py
agent/state/: __init__.py  agent_state.py
agent/tools/: __init__.py  base.py  builtin.py  executor.py  registry.py
agent/validation/: __init__.py  build.py  lint.py  patch.py  test.py
tests/: test_agent_engine.py  test_agent_state.py  test_capability_detector.py  test_cli.py  test_command_execution.py  test_context_engine.py  test_cost_telemetry.py  test_execution_mode.py  test_factory.py  test_git_integration.py  test_incremental_planning.py  test_languages.py  test_mcp_provider.py  test_observability.py  test_offline_lock.py  test_orchestration.py  test_plugins.py  test_preflight.py  test_project_memory.py  test_providers.py  test_refiner.py  test_repo_graph.py  test_safety.py  test_search_replace.py  test_sessions.py  test_tools.py
tests/agent/evaluation/: test_phase_6_6_arbitration_benchmark.py
tests/agent/review/: test_phase_6_4_routing.py  test_phase_6_5_arbitration.py  test_review.py
tests/agent/reviewers/: test_claude_reviewer.py
tests/suites/: arbitration_mock_suite.json
