[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localcli"
version = "0.6.0"
description = "Local-first, multi-stage autonomous coding agent (Ollama by default; any role can run on a cloud model)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "localcli contributors" }]
keywords = ["llm", "coding-agent", "ollama", "local-first", "ripgrep", "tree-sitter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
]

# Pinned to the known-good combination from requirements.txt (the tree-sitter
# core/grammar versions in particular must stay compatible).
dependencies = [
    "aiohttp==3.9.5",
    "aiofiles==23.2.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "tree-sitter==0.22.3",
    "tree-sitter-python==0.21.0",
    "tree-sitter-javascript==0.21.4",
    "tree-sitter-typescript==0.21.2",
    # Phase 8A: additional language grammars (Go / Rust / Java). Pinned to the
    # tree-sitter 0.22.x-compatible releases. A missing/unloadable grammar is
    # skipped gracefully at runtime, so these are convenience pins, not hard
    # requirements for indexing the core (python/js/ts) languages.
    "tree-sitter-go==0.21.0",
    "tree-sitter-rust==0.21.2",
    "tree-sitter-java==0.21.0",
]

[project.optional-dependencies]
# Test + lint deps, installed-but-undeclared since Phase 1 — formalized here.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 120
target-version = "py310"
# Generated/runtime artifacts and the venv are never linted.
extend-exclude = ["workspace", "reports", "logs", "venv", ".venv"]

[tool.ruff.lint]
# Pyflakes (F) catches real bugs (unused imports, redefinitions); pycodestyle
# E/W for obvious style. The rest are intentionally scoped out below to keep CI
# green without a large stylistic rewrite of working modules.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line length — handled loosely; not worth churn here
    "E701",  # multiple statements on one line (compact dispatch blocks)
    "E722",  # bare except — used deliberately in fail-open guards
    "E402",  # module import not at top — config.py loads settings before logging
    "E741",  # ambiguous var names (pre-existing)
    "W291",  # trailing whitespace — cosmetic, avoided to keep diffs surgical
    "W293",  # blank line with whitespace — cosmetic, same reason
]

[project.scripts]
localcli = "agent.cli:main"

[project.urls]
Homepage = "https://github.com/localcli/localcli"

[tool.setuptools.packages.find]
include = ["agent*"]
